--- a/ButtonPromo.html
+++ b/ButtonPromo.html
@@ -47,7 +47,7 @@
                 <a href="">
                 <span>Skull special nargile with<br> 
                     <span style="color:rgb(255, 167, 4); font-weight: bold;">Mazaya</span> fruit taste<br></span>
-               <img src="nargile2.jpg" alt="promoimg">
+               <img src="nargile2.JPG" alt="promoimg">
                
                <span style="font-size: 25px;"><br>Price : 19.99lv</span>
                </a>
