--- a/ButtonPromo.html
+++ b/ButtonPromo.html
@@ -27,7 +27,7 @@
         <div class="menu">
             <a href="signIn.html">Sign in</a>
             <a href="register.html">Register</a>
-            <a href="html.html">Home</a> 
+            <a href="index.html">Home</a> 
         </div>
     </nav>
 
