--- a/AdminOfOrders.html
+++ b/AdminOfOrders.html
@@ -16,7 +16,7 @@
 
     <nav>
 
-    <img onclick="location.href='html.html'"  src="head.png" style="display:inline">
+    <img onclick="location.href='index.html'"  src="head.png" style="display:inline">
 
     <div class="form">
        <input type="search" placeholder="Search" >
