--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
 
-    <img onclick="location.href='html.html'"  src="head.png" style="display:inline">
+    <img onclick="location.href='index.html'"  src="head.png" style="display:inline">
 
     <div class="form">
        <input type="search" placeholder="Search" >
@@ -27,7 +27,7 @@
     <div class="menu">
         <a href="signIn.html">Sign in</a>
         <a href="register.html">Register</a>
-        <a href="html.html">Home</a> 
+        <a href="index.html">Home</a> 
     </div>
 
     </nav>
