--- a/SignIn.html
+++ b/SignIn.html
@@ -13,7 +13,7 @@
 <body style="background:url(back.jpg)">
     <nav>
 
-        <img onclick="location.href='html.html'" src="head.png" style="display:inline">
+        <img onclick="location.href='index.html'" src="head.png" style="display:inline">
     
         <div class="form">
            <input style="margin-right: 0;" type="search" placeholder="Search" >
@@ -24,7 +24,7 @@
         <div class="menu">
             <a href="signIn.html">Sign in</a>
             <a href="register.html">Register</a>
-            <a href="html.html">Home</a> 
+            <a href="index.html">Home</a> 
         </div>
     </nav>
 
