--- a/SignIn.html
+++ b/SignIn.html
@@ -22,8 +22,8 @@
         </div>
     
         <div class="menu">
-            <a href="signIn.html">Sign in</a>
-            <a href="register.html">Register</a>
+            <a href="SignIn.html">Sign in</a>
+            <a href="Register.html">Register</a>
             <a href="index.html">Home</a> 
         </div>
     </nav>
