--- a/SignIn.html
+++ b/SignIn.html
@@ -23,7 +23,7 @@
     
         <div class="menu">
             <a href="SignIn.html">Sign in</a>
-            <a href="Register.html">Register</a>
+            <a href="register.html">Register</a>
             <a href="index.html">Home</a> 
         </div>
     </nav>
