--- a/register.html
+++ b/register.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="Style2.css">
     <link rel="stylesheet" href="regStyle.css">
     <title>Document</title>
 </head>
 <body style="background:url(back.jpg)">
     <nav>
 
-        <img onclick="location.href='html.html'" src="head.png" style="display:inline">
+        <img onclick="location.href='index.html'" src="head.png" style="display:inline">
     
         <div class="form">
            <input style="margin-right: 0;" type="search" placeholder="Search" >
@@ -22,9 +22,9 @@
         </div>
     
         <div class="menu">
-            <a href="signIn.html">Sign in</a>
+            <a href="SignIn.html">Sign in</a>
             <a href="register.html">Register</a>
-            <a href="html.html">Home</a> 
+            <a href="index.html">Home</a> 
         </div>
     </nav>
 
