--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="menu">
-        <a href="signIn.html">Sign in</a>
+        <a href="SignIn.html">Sign in</a>
         <a href="register.html">Register</a>
         <a href="index.html">Home</a> 
     </div>
