--- a/Button1.html
+++ b/Button1.html
@@ -24,9 +24,9 @@
         </div>
     
         <div class="menu">
-            <a href="signIn.html">Sign in</a>
-            <a href="register.html">Register</a>
-            <a href="index.html">Home</a> 
+             <a href="SignIn.html">Sign in</a>
+        <a href="register.html">Register</a>
+        <a href="index.html">Home</a> 
         </div>
     </nav>
 
