--- a/News.html
+++ b/News.html
@@ -25,9 +25,9 @@
         </div>
     
         <div class="menu">
-            <a href="signIn.html">Sign in</a>
-            <a href="register.html">Register</a>
-            <a href="index.html">Home</a> 
+            <a href="SignIn.html">Sign in</a>
+        <a href="register.html">Register</a>
+        <a href="index.html">Home</a> 
         </div>
     </nav>
 
