--- a/order.html
+++ b/order.html
@@ -16,15 +16,15 @@
 
 <body>
     <nav>
-        <img onclick="location.href='html.html'" src="head.png" style="display:inline">
+        <img onclick="location.href='inex.html'" src="head.png" style="display:inline">
         <div class="form">
            <input type="search" placeholder="Search" >
            <button type="submit" ><i class="fa fa-search"></i></button>
         </div>
         <div class="menu">
-            <a href="signIn.html">Sign in</a>
-            <a href="register.html">Register</a>
-            <a href="html.html">Home</a> 
+               <a href="SignIn.html">Sign in</a>
+        <a href="register.html">Register</a>
+        <a href="index.html">Home</a> 
         </div>
     </nav>
 
