--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
     <script>
         function goToHomePage()
         {
-            location.href="html.html";
+            location.href="index.html";
         }
     </script>
 </body>
