--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav>
-        <img onclick="location.href='inex.html'" src="head.png" style="display:inline">
+        <img onclick="location.href='index.html'" src="head.png" style="display:inline">
         <div class="form">
            <input type="search" placeholder="Search" >
            <button type="submit" ><i class="fa fa-search"></i></button>
