--- a/News.html
+++ b/News.html
@@ -40,8 +40,8 @@
         <div class="news">
 
             <h1>Различно седмично намаление всеки понеделник!</h1>
-            <p>Всяка седмица ще имата въможността да пробвате най-поръчваните наргилета и тютюни от минала седмица.
-                Ще можете да поръчате готови комбинации от наргилета, маркучи и тютюни на промоциални цени. Не изпускайте
+            <p>Всяка седмица ще имате въможността да пробвате най-поръчваните наргилета и тютюни от миналата седмица.
+                Ще може да поръчате готови комбинации от наргилета, маркучи и тютюни на промоционални цени. Не изпускайте
                 да погледнете страницата с <a href="ButtonPromo.html" style="color:#c9c073;font-size: 27px; text-decoration: none;">Weekly promotions!</a>
             </p>
         </div>  
@@ -52,7 +52,7 @@
             <p>Скоро ще имате възможността да споделяте опит и впечатления, които са свързани с
                 поръчаните от вас наргилета и комбинациите от тютюни, с останалите нарга фенове.
                 Чатът ще бъде предназначен и създаден за усления при следващия ви избор на комбинация.
-                Условията за използване на чата ще могат да бъдат прочетени при него пускане.
+                Условията за използване на чата ще могат да бъдат прочетени при неговото пускане.
             </p>
         </div>
 
@@ -61,10 +61,10 @@
         <div class="news">
 
             <h1>Ние ценим клиентите си!</h1>
-            <p>Клиентите за нас  са на първо място! Ние следим вашата зайнтересованос и активност към нас.
+            <p>Клиентите за нас  са на първо място! Ние следим вашата заинтересованост и активност към нас.
                Според активността на всеки регистриран потребител, на края на месеце ще бъдат пускани специални промоции и 
                оферти. Ще може да се възползвате от тях по свяко време след тяхното получане до края на месеца.
-               Не пропускай да разберете какво ще ви очаква следващия месец!
+               Не пропускайте да разберете какво ще ви очаква следващия месец!
 
             </p>
         </div>
