--- a/Provider.html
+++ b/Provider.html
@@ -17,7 +17,7 @@
 
     <section>
 
-        <h4>Your path.</h4>
+      <div id="header"> <h4>Your path.</h4></div> 
         <div id="map"></div>
 
     <div id="pool">
