--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <pre>
 
 
-            Click on the Order button int the 
+            Click on the Order button in the 
             circle menu bar in the home page. 
             Its goig to lead you to the
             order page.
