--- a/Button1.html
+++ b/Button1.html
@@ -69,7 +69,7 @@
             <aside>
             <p>
 
-                    Тютюневата вкусове на Mazaya се отличава с уникалните си съставки, които включват: 
+                    Тютюневите вкусове на Mazaya се отличава с уникалните си съставки, които включват: 
                     висококачествен френски тютюн, медицински глицерин, чист мед и натурални ароматизатори (без алкохол).
             </p>
             
