--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             Click on the Order button in the 
             circle menu bar in the home page. 
-            Its goig to lead you to the
+            Its going to lead you to the
             order page.
         </pre>
        </aside>
@@ -70,7 +70,7 @@
             We are the people who can make your 
             wishesh for narga come true.
             You can order for self-home use or 
-            for big ivents(like your 
+            for big events(like your 
             birthday party).
         </pre>
 
@@ -85,7 +85,7 @@
             You can refund bought product 
             from our site like: tastes or nargile.
             You can't refund an order nargile, 
-            only the onece you bought.
+            only the once you bought.
         </pre>
        </aside>
 
