--- a/News.html
+++ b/News.html
@@ -62,7 +62,7 @@
 
             <h1>Ние ценим клиентите си!</h1>
             <p>Клиентите за нас  са на първо място! Ние следим вашата заинтересованост и активност към нас.
-               Според активността на всеки регистриран потребител, на края на месеце ще бъдат пускани специални промоции и 
+               Според активността на всеки регистриран потребител, на края на месеца ще бъдат пускани специални промоции и 
                оферти. Ще може да се възползвате от тях по свяко време след тяхното получане до края на месеца.
                Не пропускайте да разберете какво ще ви очаква следващия месец!
 
